# Parallel-Calculations

./: .gitignore  README.md
task1/: CMakeLists.txt  Makefile  main.cpp
task2/: CMakeLists.txt
task2/part1/: exp_20x20k.txt  exp_40x40k.txt  main.cpp
task2/part2/: exp_4000k.txt  main.cpp
task2/part3/: exp_40x40k_m1.txt  exp_40x40k_m2.txt  main_m1.cpp
task3/part1/: main.cpp  res.txt
task3/part2/src/: Client.cpp  Server.cpp  check.py  main.cpp  out_pow.txt  out_sin.txt  out_sqrt.txt
task4/: main.py  tempwpkwrnvqvg.py
task5/: main.cu
task6/: CMakeLists.txt  check.py  optimized.cpp  output1.csv  report.docx  report.nsys-rep  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  test.cu
task7/: CMakeLists.txt  check.py  optimized.cpp  report4.nsys-rep
task8/: CMakeLists.txt  optimized.cu  report.nsys-rep
